samples/_failures_safe/1761324320_f5f6d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8b834a0.c: In function ‘main’:
./samples/SAFE/__tmp_f8b834a0.c:168:5: error: expected declaration or statement at end of input
  168 |     }
      |     ^
